# online-moment-selection

./: .gitignore  README.md  copd_data_main.py  environment.yml  frontdoor_backdoor_main.py  jtpa_iv_late_main.py  logistic_iv_LATE_main.py  mlp_iv_LATE_main.py  observational_two_covariates_main.py  predictors.py  pyproject.toml  sample_revealer.py  strategies.py
causal_models/: confounder_mediator_scms.py  copd_data_scms.py  iv_with_covariates_scms.py  jtpa_scms.py  observational_two_covariates_scms.py  scm.py
datasets/: jtpa.RData  jtpa_processed.pkl  rff_IV_true_scm.pkl
datasets/yang_and_ding/: main_ns3.csv  readme.txt  validation_ns3.csv
gmm/: copd_data.py  frontdoor_backdoor.py  gmm_equations.py  iv_LATE.py  jtpa.py  observational_two_covariates.py
notebooks/: copd_data_main.ipynb  copd_data_true_ATE.ipynb  jtpa_IV_true_LATE.ipynb  jtpa_data_processing.ipynb  jtpa_iv_LATE_main_MLP.ipynb  linear_frontdoor_backdoor_main.ipynb  linear_iv_LATE_main.ipynb  nonlinear_iv_LATE_main.ipynb  observational_two_covariates_main.ipynb
utils/: data_utils.py  parallel_utils.py  plot_utils.py  print_utils.py  rff_utils.py  selection_utils.py  sigmoid_utils.py
